# synth_rs

./: Cargo.toml  README.md
src/: instruments.rs  main.rs  noise_maker.rs  note.rs
