[package]
name = "synth_rs"
version = "0.1.0"
authors = ["cgiguere <c.giguere42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
device_query = "0.2.8"
fastrand = "1.4.0"
enum_dispatch = "0.3.5"
